Added some styling into the template that renders, index.html. Will further adjust and smooth out in a bit. Back end is fully operational at this time.

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,50 +2,136 @@
 <html lang="en">
   <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <style>
+      body {
+        font-family: monospace;
+        background-color: #484E48;
+      }
+      h1 {
+        background-color: #31672E;
+        color: white;
+        display: inline-block;
+        font-size: 3em;
+        margin: 0;
+        padding: 14px;
+      }
+      h1 img {
+        height: 90px;
+        width: 80px;
+        margin-top: 5px;
+      }
+      #chatbox {
+        margin-left: auto;
+        margin-right: auto;
+        width: 40%;
+        margin-top: 60px;
+      }
+      #userInput {
+        margin-left: auto;
+        margin-right: auto;
+        width: 40%;
+        margin-top: 60px;
+        text-decoration: none;
+      }
+      #textInput {
+        width: 90%;
+        border: 1px solid transparent;
+        border-bottom: 2px solid black;
+        font-family: monospace;
+        font-size: 17px;
+      }
+      .userText {
+        color: white;
+        border: 1px solid transparent;
+        border-radius: 2px;
+        font-family: monospace;
+        font-size: 17px;
+        text-align: right;
+        line-height: 30px;
+      }
+      .userText span {
+        background-color: #5A6E58;
+        padding: 10px;
+        border-radius: 10px;
+      }
+      .botText {
+        color: white;
+        font-family: monospace;
+        font-size: 17px;
+        text-align: left;
+        line-height: 30px;
+      }
+      .botText span {
+        background-color: #31672E;
+        padding: 10px;
+        border-radius: 10px;
+      }
+      .boxed {
+        margin-left: auto;
+        margin-right: auto;
+        width: 78%;
+        margin-top: 60px;
+        border: 1px solid transparent;
+      }
+      .box {
+        border: 2px solid black;
+        border-radius: 10px;
+      }
+    </style>
+    </style>
   </head>
   <body>
-    <h1>Nutribot First Attempt</h1>
-    <div>
-      <div id="chatbox">
-        <p class="botText"><span>Hi (: I am your personal Nutribot</span></p>
-      </div>
+    <center>
+      <h1>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQzfhGJOz4NSGO6x8EB4gto4KYKIfRdE_o2qOTQF8ZGCgDvUfeO&usqp=CAU"
+          />Your personal Nutribot
+      </h1>
+    </center>
+    <div class="box"></div>
+      <div class="boxed">
+        <div>
+          <div id="chatbox">
+            <p class="botText"><span>Hi (: I am your personal Nutribot</span></p>
+          </div>
 
-      <div id="userInput">
-        <input
-          id="textInput"
-          type="text"
-          name="msg"
-          placeholder="Type 'define' followed by the name of the vitamin/mineral you want defined.
-          You can also ask for a list of vitamins and minerals to see an overall view."
-        />
-      </div>
+          <div id="userInput">
+            <input
+              id="textInput"
+              type="text"
+              name="msg"
+              placeholder="Ask me how I'm doing (:"
+            />
+            
+          <input id="buttonInput" type="submit" value="Send" style="border: 1px solid transparent; border-radius: 3px; font-size: 1.10em; background-color: #5A6E58; color: white; text-decoration: underline;" />
+        </div>
 
-      <script>
-        function getBotResponse() {
-          let rawText = $("#textInput").val();
-          let userHtml = '<p class="userText"><span>' + rawText + "</span></p>";
-          $("#textInput").val("");
-          $("#chatbox").append(userHtml);
-          document
-            .getElementById("userInput")
-            .scrollIntoView({ block: "start", behaviour: "smooth" });
-          $.get("/reply", { msg: rawText }).done(function (data) {
-            let botHtml = '< p class = "botText"><span>' + data + "</span>";
-            $("#chatbox").append(botHtml);
+        <script>
+          function getBotResponse() {
+            var rawText = $("#textInput").val();
+            var userHtml = '<p class="userText"><span>' + rawText + "</span></p>";
+            $("#textInput").val("");
+            $("#chatbox").append(userHtml);
             document
               .getElementById("userInput")
               .scrollIntoView({ block: "start", behaviour: "smooth" });
-          });
-        }
-        $("#textInput").keypress(function (e) {
-          if (e.which == 13) {
-            getBotResponse();
+            $.get("/reply", { msg: rawText }).done(function (data) {
+              var botHtml = '<p class = "botText"><span>' + data + "</span>";
+              $("#chatbox").append(botHtml);
+              document
+                .getElementById("userInput")
+                .scrollIntoView({ block: "start", behaviour: "smooth" });
+            });
           }
-        });
-        $("#buttonInput").click(function () {
-          getBotResponse();
-        });
-      </script>
+          $("#textInput").keypress(function (e) {
+            if (e.which == 13) {
+              getBotResponse();
+            }
+          });
+          $("#buttonInput").click(function () {
+            getBotResponse();
+          });
+        </script>
+      </div>
     </div>
   </body>
 </html>
