Modified YML file, so bot will respond more effectively. Testing now, will udpate again.

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <style>
       body {
         font-family: monospace;
-        background-color: #484E48;
+        background-color: #E0F2E9;
       }
       h1 {
         background-color: #31672E;
@@ -83,7 +83,7 @@
   <body>
     <center>
       <h1>
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQzfhGJOz4NSGO6x8EB4gto4KYKIfRdE_o2qOTQF8ZGCgDvUfeO&usqp=CAU"
+        <img src="../images/nutritionLorem.jpg"
           />Your personal Nutribot
       </h1>
     </center>
