Made changes to YML file for the bot's conversational ability. Still working out all kinks for more desirable functionality.

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,7 @@
         padding: 14px;
       }
       h1 img {
+        border-radius: 50%;
         height: 90px;
         width: 80px;
         margin-top: 5px;
