Adjusted some styles and an image for the bot

--- a/templates/index.html
+++ b/templates/index.html
@@ -63,7 +63,6 @@
         line-height: 30px;
       }
       .botText span {
-        background-color: #31672E;
         padding: 10px;
         border-radius: 10px;
       }
@@ -84,7 +83,7 @@
   <body>
     <center>
       <h1>
-        <img src="../images/nutritionLorem.jpg"
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQzfhGJOz4NSGO6x8EB4gto4KYKIfRdE_o2qOTQF8ZGCgDvUfeO&usqp=CAU"
           />Your personal Nutribot
       </h1>
     </center>
